--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,9 @@ Package: SSMD
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Xiaoyu Lu
+Maintainer: Xiaoyu Lu <lu14@iu.edu>
 Description: This package implements methods for estimate cell type proportion in bulk tissue gene expression data. 
-    Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Imports: bcv
 Encoding: UTF-8
